--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+  <div class="p=2">
+    <%= render 'shared/navbar' %>
+  </div>
+  <div class="container-fluid">
     <%= yield %>
+  </div>
   </body>
 </html>
