--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,16 +1,22 @@
-<%= form_with model: @user, url: sign_up_path do |form| %>
-  <%= render partial: "shared/form_errors", locals: { object: form.object } %>
-  <div>
-    <%= form.label :email %>
-    <%= form.email_field :email, required: true %>
+<div class="container mt-5">
+  <div class="row align-items-start">
+    <div class="col-4">
+      <%= form_with model: @user, url: sign_up_path do |form| %>
+        <%= render partial: "shared/form_errors", locals: { object: form.object } %>
+        <div>
+          <%= form.label :email, class:"form-label" %>
+          <%= form.email_field :email, class:"form-control" , required: true %>
+        </div>
+        <div class="my-4">
+          <%= form.label :password, class:"form-label" %>
+          <%= form.password_field :password, class:"form-control" , required: true %>
+        </div>
+        <div>
+          <%= form.label :password_confirmation, class:"form-label" %>
+          <%= form.password_field :password_confirmation, class:"form-control" , required: true %>
+        </div>
+        <%= form.submit "Sign Up", class: "btn btn-success my-4" %>
+      <% end %>
+    </div>
   </div>
-  <div>
-    <%= form.label :password %>
-    <%= form.password_field :password, required: true %>
-  </div>
-  <div>
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation, required: true %>
-  </div>
-  <%= form.submit "Sign Up" %>
-<% end %>
+</div>
